# futebol-stats

./: .env.example  .gitignore  .pre-commit-config.yaml  Etapas projeto.md  README.md  pyproject.toml  requirements.txt
app/: Home.py
app/.streamlit/: config.toml
app/components/: footer.py  header.py  plots.py  tables.py
app/pages/: Análise_de_público.py  Análise_mandantes_e_visitantes.py  Análise_por_ano.py  Tabela_de_dados.py
app/utils/: auth.py  config.py  importer.py  state.py  theming.py
pipe/data_exporters/: save_data.py
pipe/data_loaders/: get_data.py  google_auth.py
pipe/pipelines/futebol_stats/: metadata.yaml
pipe/transformers/: add_columns.py  calculate_new_columns.py  data_cleaning.py  melt_dataframe.py  set_match_points.py
